# knights

./: CMakeLists.txt  knights_2.0.1.orig.tar.gz.delta  knights_2.0.1.orig.tar.gz.id  knights_2.2.0.orig.tar.bz2.delta  knights_2.2.0.orig.tar.bz2.id  knights_2.3.1.orig.tar.bz2.delta  knights_2.3.1.orig.tar.bz2.id  knights_2.3.2.orig.tar.bz2.delta  knights_2.3.2.orig.tar.bz2.id  knights_2.4.1.orig.tar.bz2.delta  knights_2.4.1.orig.tar.bz2.id  knights_2.4.2.orig.tar.bz2.delta  knights_2.4.2.orig.tar.bz2.id  knights_2.5.0.orig.tar.bz2.delta  knights_2.5.0.orig.tar.bz2.id
debian/: changelog  control  copyright  knights.1  knights.6  knights.links  knights.manpages  knights.xpm  menu  rules
debian/patches/: 00list  01_add_categories_to_desktop_file.diff  01_gcc-4.0-fix.dpatch  02_de.po.dpatch  02_no_hotnewstuff.diff  03_dont_crash_fics.diff  03_noGPLonload.dpatch  04_qt3_headers.dpatch  04_stop_clock_game_over.diff  load_right_default_theme.diff  series
doc/: CMakeLists.txt
doc/de/: index.docbook
doc/es/: index.docbook
doc/et/: index.docbook
po/: CMakeLists.txt
po/bg/: knights.po
po/bs/: knights.po
po/ca/: knights.po
po/ca@valencia/: knights.po
po/cs/: knights.po
po/da/: knights.po
po/de/: knights.po
po/el/: knights.po
po/en_GB/: knights.po
po/eo/: knights.po
po/es/: knights.po
po/et/: knights.po
po/fi/: knights.po
po/fr/: knights.po
po/ga/: knights.po
po/hu/: knights.po
po/it/: knights.po
po/ja/: knights.po
po/lt/: knights.po
po/ml/: knights.po
po/ms/: knights.po
po/nb/: knights.po
po/nds/: knights.po
po/nl/: knights.po
po/nn/: knights.po
po/pl/: knights.po
po/pt/: knights.po
po/pt_BR/: knights.po
po/ro/: knights.po
po/ru/: knights.po
po/sk/: knights.po
po/sr/: knights.po
po/sr@ijekavian/: knights.po
po/sr@ijekavianlatin/: knights.po
po/sr@latin/: knights.po
po/sv/: knights.po
po/tr/: knights.po
po/ug/: knights.po
po/uk/: knights.po
po/zh_TW/: knights.po
(+8 files in other folders)
